// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WorkBody /> renders a loading state for images 1`] = `<styled.div />`;

exports[`<WorkBody /> renders a loading state for works 1`] = `<styled.div />`;

exports[`<WorkBody /> renders correctly 1`] = `
<styled.div>
  <Thumbnail
    image={
      Object {
        "height": 100,
        "title": "title",
        "url": "https://url.com",
        "width": 100,
      }
    }
    work={
      Object {
        "featured": true,
        "hero": true,
        "images": Array [
          "imageId",
        ],
        "published": "10-01-2010",
        "slug": "slug",
        "summary": "summary",
        "thumbnail": "imageId",
        "title": "title",
        "type": "type",
      }
    }
  />
</styled.div>
`;

exports[`<WorkBody /> renders image errors 1`] = `
<AppError
  errorMessage="Error while fetching images"
/>
`;

exports[`<WorkBody /> renders work errors 1`] = `
<AppError
  errorMessage="Error while fetching works"
/>
`;

exports[`<WorkBody /> returns null when there are no valid images 1`] = `null`;

exports[`<WorkBody /> returns null when there are no valid works 1`] = `null`;
